# poker-hand-evaluator

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  NOTICE  README.md
.github/workflows/: ci.yml  miri.yml  semver.yml
bench/: history.csv
crates/badugi/: Cargo.toml
crates/badugi/src/: lib.rs
crates/badugi/tests/: selection.rs  strength.rs
crates/core/: Cargo.toml
crates/core/src/: hand.rs  lib.rs  offsets.rs
crates/core/tests/: evaluate.rs  hand.rs
crates/deuce-seven/: Cargo.toml
crates/deuce-seven-assets/: Cargo.toml
crates/deuce-seven-assets/src/: lib.rs  lookup.rs
crates/deuce-seven/benches/: eval.rs
crates/deuce-seven/src/: lib.rs
crates/deuce-seven/tests/: evaluator.rs
crates/eight-low/: Cargo.toml
crates/eight-low-assets/: Cargo.toml
crates/eight-low-assets/src/: constants.rs  lib.rs  lookup.rs  offsets.rs
crates/eight-low/benches/: eval.rs
crates/eight-low/src/: hand.rs  lib.rs  rule.rs
crates/eight-low/tests/: evaluator.rs  rules.rs
crates/holdem/: BENCH_NOTES.md  Cargo.toml
crates/holdem-assets/: Cargo.toml
crates/holdem-assets/src/: lib.rs  lookup.rs
crates/holdem/benches/: eval.rs  eval_cuda.rs
crates/holdem/src/: category.rs  enumerate.rs  eval.rs  heads_up.rs  lib.rs  parse.rs
crates/holdem/src/cuda/: context.rs  kernel.rs  mod.rs
crates/holdem/tests/: category_counts.rs  cuda_parity.rs  edge_cases.rs  parser.rs
crates/omaha/: BENCH_NOTES.md  Cargo.toml
crates/omaha-assets/: Cargo.toml  build.rs
crates/omaha-assets/src/: lib.rs
crates/omaha-fast/: BENCH_NOTES.md  Cargo.toml
crates/omaha-fast-assets/: Cargo.toml  build.rs
crates/omaha-fast-assets/src/: lib.rs
crates/omaha-fast/benches/: eval.rs  eval_cuda.rs
crates/omaha-fast/examples/: check_bases.rs
crates/omaha-fast/src/: batch.rs  dp.rs  eval.rs  flush_5card.rs  hash.rs  lib.rs
crates/omaha-fast/src/cuda/: context.rs  kernel.rs  mod.rs
crates/omaha-fast/tests/: cuda_parity.rs  parity_with_phe_omaha.rs
crates/omaha/benches/: eval.rs  eval_cuda.rs
crates/omaha/examples/: exhaustive.rs
crates/omaha/src/: batch.rs  dp.rs  eval.rs  flush_5card.rs  kev.rs  kev_tables.rs  lib.rs  lookup_5card.rs  path1.rs  path2.rs  path3.rs
crates/omaha/src/cuda/: context.rs  kernel.rs
crates/omaha/tests/: batch.rs  board_no_straight.rs  cuda_parity.rs  equivalence.rs  evaluator.rs  fast_path.rs  flush_dominates.rs  kev_equivalence.rs  noflush_table.rs  path3_direct.rs  straight_short_circuit.rs  upper_bound.rs
crates/three-card/: Cargo.toml
crates/three-card/src/: lib.rs
crates/three-card/tests/: ordering.rs  strength.rs
docs/: followup-omaha-fast.md  implementation-prompt-three-card.md  implementation-prompt.md  omaha-perf-investigation.md  yabaitechtokyo_vol6_holdem_chapter.md
docs/research/: plo4-cpu-optimization-techniques.md
examples/: heads_up_equity.rs  omaha_eval.rs  showdown.rs
scripts/: Cargo.toml
scripts/src/: lib.rs  naive_high.rs
src/: lib.rs
tests/: facade.rs  proptest.rs
