[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/holdem",
    "crates/holdem-assets",
    "crates/eight-low",
    "crates/eight-low-assets",
    "crates/deuce-seven",
    "crates/deuce-seven-assets",
    "crates/omaha",
    "crates/omaha-assets",
    "crates/badugi",
    "scripts",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["kyohah <kyohah@gmail.com>"]
repository = "https://github.com/kyohah/poker-hand-evaluator"

# Sub-crate path deps are declared inline as each crate is bootstrapped.
[workspace.dependencies]

[profile.release]
lto = "thin"

# Build scripts (notably `phe-omaha-assets/build.rs`, which
# enumerates ~700M sub-hand combinations to generate FLUSH_PLO4 /
# NOFLUSH_PLO4) need optimization to run in seconds instead of
# minutes. These overrides apply in both release and dev profiles.
[profile.release.build-override]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[package]
name = "poker-hand-evaluator"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Unified poker hand evaluator: Hold'em, 8-or-better low, A-5 lowball, 2-7 lowball, Omaha"

[features]
# Default to every variant. The crate's only downstream consumer
# (`poker-cuda-solver`) already pins `features = ["all"]`; lookup
# tables ship as `include_bytes!`-embedded blobs (or build.rs-
# generated ones for the big PLO4 / Omaha-path-1 tables) so adding
# rules pulls nothing extra from crates.io. Stripped-down defaults
# only trip up `cargo test --workspace` on a fresh clone.
default = ["all"]
holdem = ["dep:phe-holdem"]
eight-low = ["dep:phe-eight-low"]
deuce-seven = ["dep:phe-deuce-seven"]
omaha = ["dep:phe-omaha"]
badugi = ["dep:phe-badugi"]
all = ["holdem", "eight-low", "deuce-seven", "omaha", "badugi"]

[dependencies]
phe-core = { path = "crates/core" }
phe-holdem = { path = "crates/holdem", optional = true }
phe-eight-low = { path = "crates/eight-low", optional = true }
phe-deuce-seven = { path = "crates/deuce-seven", optional = true }
phe-omaha = { path = "crates/omaha", optional = true }
phe-badugi = { path = "crates/badugi", optional = true }

[dev-dependencies]
phe-eight-low = { path = "crates/eight-low" }
