[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/holdem",
    "crates/holdem-assets",
    "crates/eight-low",
    "crates/eight-low-assets",
    "crates/deuce-seven",
    "crates/deuce-seven-assets",
    "crates/omaha",
    "crates/omaha-assets",
    "crates/badugi",
    "scripts",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["kyohah <kyohah@gmail.com>"]
repository = "https://github.com/kyohah/poker-hand-evaluator"
homepage = "https://github.com/kyohah/poker-hand-evaluator"
categories = ["games", "algorithms"]
keywords = ["poker", "hand-evaluator", "holdem", "omaha", "lowball"]
rust-version = "1.78"

# Sub-crate path deps are declared inline as each crate is bootstrapped.
[workspace.dependencies]

[profile.release]
lto = "thin"

# Build scripts (notably `phe-omaha-assets/build.rs`, which
# enumerates ~700M sub-hand combinations to generate FLUSH_PLO4 /
# NOFLUSH_PLO4) need optimization to run in seconds instead of
# minutes. These overrides apply in both release and dev profiles.
[profile.release.build-override]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[package]
name = "poker-hand-evaluator"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
rust-version.workspace = true
readme = "README.md"
description = "Unified poker hand evaluator: Hold'em, 8-or-better low, A-5 lowball, 2-7 lowball, Omaha"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
# Default to every variant. The crate's only downstream consumer
# (`poker-cuda-solver`) already pins `features = ["all"]`; lookup
# tables ship as `include_bytes!`-embedded blobs (or build.rs-
# generated ones for the big PLO4 / Omaha-path-1 tables) so adding
# rules pulls nothing extra from crates.io. Stripped-down defaults
# only trip up `cargo test --workspace` on a fresh clone.
default = ["all"]
holdem = ["dep:phe-holdem"]
eight-low = ["dep:phe-eight-low"]
deuce-seven = ["dep:phe-deuce-seven"]
omaha = ["dep:phe-omaha"]
badugi = ["dep:phe-badugi"]
all = ["holdem", "eight-low", "deuce-seven", "omaha", "badugi"]

# Activate the NVRTC CUDA backend on every variant that ships one
# (currently `phe-holdem` and `phe-omaha`). Variants that don't enable
# their own optional `cuda` feature are silently skipped — the `?/cuda`
# weak-feature syntax means this only fires when the variant itself is
# already turned on. Solver consumers typically pin
# `features = ["all", "cuda"]`.
cuda = ["phe-holdem?/cuda", "phe-omaha?/cuda"]

[dependencies]
phe-core = { version = "0.1.0", path = "crates/core" }
phe-holdem = { version = "0.1.0", path = "crates/holdem", optional = true }
phe-eight-low = { version = "0.1.0", path = "crates/eight-low", optional = true }
phe-deuce-seven = { version = "0.1.0", path = "crates/deuce-seven", optional = true }
phe-omaha = { version = "0.1.0", path = "crates/omaha", optional = true }
phe-badugi = { version = "0.1.0", path = "crates/badugi", optional = true }

[dev-dependencies]
phe-eight-low = { version = "0.1.0", path = "crates/eight-low" }
proptest = "1"
