[package]
name = "phe-scripts"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Asset generators for the poker-hand-evaluator workspace"
publish = false

[dependencies]
phe-core = { path = "../crates/core" }
phe-holdem-assets = { path = "../crates/holdem-assets" }

[[bin]]
name = "gen-deuce-seven-lookup"
path = "src/bin/gen-deuce-seven-lookup.rs"

[[bin]]
name = "gen-omaha-noflush-lookup"
path = "src/bin/gen-omaha-noflush-lookup.rs"

[[bin]]
name = "gen-5card-tables"
path = "src/bin/gen_5card_tables.rs"
