[package]
name = "phe-badugi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
rust-version.workspace = true
description = "Badugi 4-card lowball hand evaluator"

[dependencies]
