[package]
name = "phe-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
rust-version.workspace = true
description = "Shared Hand/Card types and lookup-driven evaluation core for poker-hand-evaluator"

[dependencies]
