[package]
name = "phe-eight-low"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
rust-version.workspace = true
description = "8-or-better and A-5 lowball (Razz) hand evaluator (5-7 cards)"

[dependencies]
phe-eight-low-assets = { version = "0.1.0", path = "../eight-low-assets" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "eval"
harness = false
