[package]
name = "phe-holdem"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
rust-version.workspace = true
description = "Hold'em high evaluator (5-7 cards) on top of phe-core"

[dependencies]
phe-core = { version = "0.1.0", path = "../core" }
phe-holdem-assets = { version = "0.1.0", path = "../holdem-assets" }
cudarc = { version = "0.19", default-features = false, features = ["std", "driver", "nvrtc", "cuda-13020", "dynamic-loading"], optional = true }
thiserror = { version = "2", optional = true }

[features]
default = []
# CUDA backend: GPU-resident 5/6/7-card Hold'em evaluator
# (1 thread = 1 hand). Adds optional `cudarc` dep with
# dynamic-loading; no CUDA toolkit required at build time, only the
# NVIDIA driver at runtime.
cuda = ["dep:cudarc", "dep:thiserror"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "eval"
harness = false

[[bench]]
name = "eval_cuda"
harness = false
required-features = ["cuda"]
