[package]
name = "phe-omaha-fast"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Omaha 4-hole high evaluator — direct port of HenryRLee/PokerHandEvaluator PLO4 perfect-hash"

[dependencies]
phe-omaha-fast-assets = { path = "../omaha-fast-assets" }

[dev-dependencies]
phe-omaha = { path = "../omaha" }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "eval"
harness = false
