[package]
name = "phe-omaha"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Omaha high evaluator (4 hole + 5 board, best-of-60) on top of phe-holdem"

[dependencies]
phe-core = { path = "../core" }
phe-holdem = { path = "../holdem" }
phe-omaha-assets = { path = "../omaha-assets" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "eval"
harness = false
