[package]
name = "phe-omaha"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
rust-version.workspace = true
description = "Omaha 4-hole high evaluator — direct port of HenryRLee/PokerHandEvaluator PLO4 perfect-hash"

[dependencies]
phe-omaha-assets = { version = "0.1.0", path = "../omaha-assets" }
cudarc = { version = "0.19", default-features = false, features = ["std", "driver", "nvrtc", "cuda-13020", "dynamic-loading"], optional = true }
thiserror = { version = "2", optional = true }

[features]
default = []
# CUDA backend: GPU-resident PLO4 evaluator (1 thread = 1 hand).
# Adds optional `cudarc` dep with dynamic-loading; no CUDA toolkit
# required at build time, only the NVIDIA driver at runtime.
cuda = ["dep:cudarc", "dep:thiserror"]

[dev-dependencies]
phe-core = { version = "0.1.0", path = "../core" }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "eval"
harness = false

[[bench]]
name = "eval_cuda"
harness = false
required-features = ["cuda"]

[[example]]
name = "check_bases"
