[package]
name = "phe-three-card"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
rust-version.workspace = true
description = "3-card high hand evaluator (OFC top row)"

[dependencies]
